--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,6 +3,10 @@ backend:
   repo: onecups/blog
   branch: main
   site_domain: trendioweb.netlify.app
+oauth:
+    client_id: Ov23li2058Qm5xDiq5TZ
+    client_secret: a9582acf03b1e1daee23df425bf89e80540e2ee8
+
 
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
