--- a/netlify.toml
+++ b/netlify.toml
@@ -5,5 +5,7 @@
 [build.environment]
   RUBY_VERSION = "3.2.2"
   BUNDLER_VERSION = "2.4.10"
+  JEKYLL_ENV = "production"
 
-
+[[plugins]]
+  package = "netlify-plugin-minify-html"
