--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,4 +1,3 @@
-# GitHub Actions workflow untuk membangun dan mendepoy situs Jekyll ke GitHub Pages
 name: Build and Deploy Main branch to Pages
 
 on:
@@ -22,20 +21,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4.1.7
+        uses: actions/checkout@v4
 
-      - name: Install Graphviz (optional, hapus jika tidak diperlukan)
-        uses: tlylt/install-graphviz@v1.0.0
+      - name: Install Graphviz (optional)
+        uses: tlylt/install-graphviz@v1
 
       - name: Setup Ruby
-        uses: ruby/setup-ruby@v1.180.1
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
-          bundler-cache: true
+          bundler: '2.3.27'
+
+      - name: Cache Ruby gems
+        uses: actions/cache@v4
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+
+      - name: Install dependencies
+        run: |
+          bundle config set path 'vendor/bundle'
+          bundle install --jobs 4 --retry 3
 
       - name: Setup GitHub Pages
         id: pages
-        uses: actions/configure-pages@v5.0.0
+        uses: actions/configure-pages@v5
 
       - name: Install Node.js dependencies
         run: npm ci
@@ -46,7 +58,7 @@ jobs:
           JEKYLL_ENV: production
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3.0.1
+        uses: actions/upload-pages-artifact@v3
 
   deploy:
     if: github.event_name != 'pull_request'
@@ -55,4 +67,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4.0.5
+        uses: actions/deploy-pages@v4
