--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -63,8 +63,11 @@ jobs:
   deploy:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
-    needs: build
+    needs: build  # Dependensi pada build job tetap ada jika kamu butuh hasil build sebelumnya
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          # Pastikan ini menggunakan halaman yang benar dan setting sudah pas
+          branch: gh-pages  # Ganti dengan branch yang sesuai jika berbeda
