--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ autopages:
     data: '_data/authors.yml' # Data file with the author details
     layouts: 
       - 'autopage_author.html' # We'll define this layout later
-    title: 'Articles par :author'
+    title: 'Articles by :author'
     permalink: '/author/:author/'
     slugify:
       mode: 'default' # choose from [raw, default, pretty, ascii or latin]
