--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -33,7 +33,7 @@ jobs:
           bundler: '2.3.27'
 
       - name: Cache Ruby gems
-        uses: actions/cache@v4
+        uses: actions/cache
         with:
           path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
