--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -60,16 +60,16 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
-  deploy:
-    if: github.event_name != 'pull_request'
-    runs-on: ubuntu-latest
-    needs: build  # Dependensi pada build job tetap ada jika kamu butuh hasil build sebelumnya
-    environment:
-      name: production  # Ganti sesuai dengan environment yang kamu gunakan
-      url: https://www.trendio.homes/  # URL halaman GitHub Pages
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-        with:
-          branch: main  # Ganti dengan branch yang sesuai jika berbeda
+deploy:
+  if: github.event_name != 'pull_request'
+  runs-on: ubuntu-latest
+  needs: build
+  environment:
+    name: production  
+    url: https://www.trendio.homes/
+  steps:
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
+      with:
+        branch: main
