--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -65,7 +65,7 @@ deploy:
   runs-on: ubuntu-latest
   needs: build
   environment:
-    name: production  
+    name: github-pages  
     url: https://www.trendio.homes/
   steps:
     - name: Deploy to GitHub Pages
