--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -63,13 +63,12 @@ jobs:
   deploy:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
-    needs: build  # Dependensi pada build job tetap ada jika kamu butuh hasil build sebelumnya
+    needs: build
     environment:
-      name: github-pages  # Environment yang digunakan
-      url: https://www.trendio.homes/  # URL halaman GitHub Pages
+      name: github-pages  
+      url: https://www.trendio.homes/
     steps:
       - name: Deploy to GitHub Pages
-        id: deployment
         uses: actions/deploy-pages@v4
         with:
-          branch: main  # Atau branch lain yang sesuai
+          branch: main
