--- a/_data/social-follow.yml
+++ b/_data/social-follow.yml
@@ -1,6 +1,6 @@
 footer:
   - name: "facebook"
-    url: "https://www.facebook.com/trendioweb"
+    url: "https://www.facebook.com/exnews1"
   - name: "twitter"
     url: "https://twitter.com/templateify"
   - name: "youtube"
@@ -13,7 +13,7 @@ footer:
 widget:
   - name: "Facebook"
     font: "facebook"
-    url: "https://www.facebook.com/trendioweb"
+    url: "https://www.facebook.com/exnews1"
   - name: "Twitter"
     font: "twitter"
     url: "https://twitter.com/templateify"
