--- a/_data/social-follow.yml
+++ b/_data/social-follow.yml
@@ -2,7 +2,7 @@ footer:
   - name: "facebook"
     url: "https://www.facebook.com/exnews1"
   - name: "twitter"
-    url: "https://twitter.com/templateify"
+    url: "https://twitter.com/zxmarcel6"
   - name: "youtube"
     url: "https://www.youtube.com/c/Templateify_Blogger"
   - name: "instagram"
@@ -16,7 +16,7 @@ widget:
     url: "https://www.facebook.com/exnews1"
   - name: "Twitter"
     font: "twitter"
-    url: "https://twitter.com/templateify"
+    url: "https://twitter.com/zxmarcel6"
   - name: "Youtube"
     font: "youtube"
     url: "https://www.youtube.com/c/Templateify_Blogger"
